--- a/package.json
+++ b/package.json
@@ -18,7 +18,10 @@
     "@angular/platform-browser": "^15.2.0",
     "@angular/platform-browser-dynamic": "^15.2.0",
     "@angular/router": "^15.2.0",
+    "mysql2": "^3.9.7",
     "rxjs": "~7.8.0",
+    "sequelize": "^6.37.3",
+    "sequelize-auto": "^0.8.8",
     "tslib": "^2.3.0",
     "zone.js": "~0.12.0"
   },
